--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,15 +1,15 @@
-[nfs-server]
+[nfs_server]
 172.31.11.175 ansible_ssh_user=ec2-user
 
-[web-servers]
+[web_servers]
 172.31.13.144 ansible_ssh_user=ec2-user
 172.31.10.244 ansible_ssh_user=ec2-user
 172.31.10.220 ansible_ssh_user=ec2-user
 
-[db-server]
+[db_server]
 172.31.11.187 ansible_ssh_user=ec2-user
 
-[lb-server]
+[lb_server]
 172.31.9.89 ansible_ssh_user=ubuntu
 
 [all:vars]
