Update the site.yml file

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,6 +1,13 @@
 ---
-- name: Common tasks play
-  ansible.builtin.import_playbook: ../static-assignments/common.yml
+- name: Load dynamic variables
+  hosts: all
+  tasks:
+    - name: Include environment variables from dynamic assignments
+      ansible.builtin.include_vars: "../dynamic-assignments/env-vars.yml"
+  tags:
+    - always
 
-- name: UAT webservers play
-  ansible.builtin.import_playbook: ../static-assignments/uat-webserver.yml
+- name: Import common static assignments
+  import_playbook: "../static-assignments/common.yml"
+- name: Import UAT webservers play
+  import_playbook: "../static-assignments/uat-webserver.yml"
