--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,4 +1,11 @@
 ---
+- name: Show playbook directory
+  hosts: all
+  tasks:
+    - name: Show playbook directory
+      ansible.builtin.debug:
+        msg: "The playbook directory is: {{ playbook_dir }}"
+
 - name: Load dynamic variables
   hosts: all
   become: true
