--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -27,3 +27,4 @@
 - ansible.builtin.include_tasks: databases.yml
 - ansible.builtin.include_tasks: users.yml
 - ansible.builtin.include_tasks: replication.yml
+- ansible.builtin.include_tasks: restore-db.yml
