--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -5,29 +5,23 @@
     name: httpd
     state: present
 
-- name: Start and enable Apache
-  become: true
-  ansible.builtin.systemd:
-    name: httpd
-    enabled: true
-    state: started
-
 - name: Install PHP
   become: true
   ansible.builtin.dnf:
     name: php
     state: present
 
-- name: Restart Apache
-  become: true
-  ansible.builtin.systemd:
-    name: httpd
-    state: restarted
-
 - name: Install git
   become: true
   ansible.builtin.dnf:
     name: git
+    state: present
+
+# New task: Install MySQL client
+- name: Install MySQL client
+  become: true
+  ansible.builtin.dnf:
+    name: mariadb  # or mysql if you prefer the official package
     state: present
 
 - name: Clone the repository
@@ -38,7 +32,7 @@
     force: true
     version: main
 
-- name: Copy html content to one level up
+- name: Copy HTML content to one level up
   become: true
   ansible.builtin.copy:
     src: /var/www/html/html/
@@ -46,15 +40,15 @@
     remote_src: true
     mode: "0755"
 
-- name: Start and enable Apache
-  become: true
-  ansible.builtin.systemd:
-    name: httpd
-    enabled: true
-    state: started
-
-- name: Recursively remove /var/www/html/html directory
+- name: Remove redundant nested html directory
   become: true
   ansible.builtin.file:
     path: /var/www/html/html
     state: absent
+
+- name: Restart and enable Apache
+  become: true
+  ansible.builtin.systemd:
+    name: httpd
+    state: restarted
+    enabled: true
