--- a/roles/webserver/handlers/main.yml
+++ b/roles/webserver/handlers/main.yml
@@ -1,3 +1,7 @@
-#SPDX-License-Identifier: MIT-0
 ---
-# handlers file for webserver
+- name: Restart Apache
+  become: true
+  ansible.builtin.systemd:
+    name: httpd
+    state: restarted
+    enabled: true
