--- a/static-assignments/uat-webserver.yml
+++ b/static-assignments/uat-webserver.yml
@@ -1,4 +1,5 @@
 ---
+# This playbook is for deploying web servers in the UAT environment.
 - name: UAT webservers
   hosts: uat_web_servers
   roles:
