--- a/roles/webserver/tasks/apache_git_nfs_mysql.yml
+++ b/roles/webserver/tasks/apache_git_nfs_mysql.yml
@@ -5,10 +5,12 @@
     name: httpd
     state: present
 
-- name: Install git
+- name: Install git and nano
   become: true
   ansible.builtin.dnf:
-    name: git
+    name: 
+      - git
+      - nano
     state: present
 
 - name: Install NFS client utilities (nfs-utils and nfs4-acl-tools)
@@ -22,5 +24,5 @@
 - name: Install official MySQL client
   become: true
   ansible.builtin.dnf:
-    name: mysql-community-client
+    name: mysql
     state: present
