--- a/roles/apache_lb/tasks/main.yml
+++ b/roles/apache_lb/tasks/main.yml
@@ -1,3 +1,19 @@
-#SPDX-License-Identifier: MIT-0
 ---
-# tasks file for apache_lb
+# Start Apache if enabled
+- name: Ensure Apache is started for UAT if enabled
+  ansible.builtin.service:
+    name: apache2
+    state: started
+    enabled: true
+  when:
+    - apache_lb_enable
+    - load_balancer_is_required
+
+# Stop Apache if not enabled
+- name: Stop Apache if not required
+  ansible.builtin.service:
+    name: apache2
+    state: stopped
+  when:
+    - not apache_lb_enable
+    - load_balancer_is_required
