--- a/roles/nginx_lb/handlers/main.yml
+++ b/roles/nginx_lb/handlers/main.yml
@@ -1,3 +1,6 @@
-#SPDX-License-Identifier: MIT-0
 ---
-# handlers file for nginx_lb
+- name: Reload Nginx
+  become: true
+  ansible.builtin.systemd:
+    name: nginx
+    state: reloaded
