--- a/dynamics-assignments/env-vars/uat.yml
+++ b/dynamics-assignments/env-vars/uat.yml
@@ -36,6 +36,6 @@ php_extensions:
 nfs_allowed_subnet: "172.31.0.0/20"
 
 # Enable Load balancer
-nginx_lb_enable: true
-apache_lb_enable: false
+nginx_lb_enabled: true
+apache_lb_enabled: false
 load_balancer_is_required: true
