--- a/roles/apache_lb/handlers/main.yml
+++ b/roles/apache_lb/handlers/main.yml
@@ -1,3 +1,6 @@
-#SPDX-License-Identifier: MIT-0
 ---
-# handlers file for apache_lb
+- name: Restart Apache
+  become: true
+  ansible.builtin.systemd:
+    name: apache2
+    state: restarted
