--- a/roles/apache_lb/tasks/configure_lb.yml
+++ b/roles/apache_lb/tasks/configure_lb.yml
@@ -30,6 +30,7 @@
 
 # Start Apache if enabled
 - name: Ensure Apache is started for UAT if enabled
+  become: true
   ansible.builtin.service:
     name: apache2
     state: started
@@ -56,6 +57,7 @@
 
 # Stop Apache if not enabled
 - name: Stop Apache if not required
+  become: true
   ansible.builtin.service:
     name: apache2
     state: stopped
