--- a/roles/nginx_lb/tasks/main.yml
+++ b/roles/nginx_lb/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+# Set up Nginx Load Balancer status
+- name: Set up Nginx Load Balancer status
+  ansible.builtin.include_tasks: lb_status.yml
+  when: lb_type != 'nginx'
+
 # Update the /etc/hosts file
 - name: Update the /etc/hosts file
   ansible.builtin.include_tasks: update_hosts.yml
