--- a/roles/apache_lb/tasks/main.yml
+++ b/roles/apache_lb/tasks/main.yml
@@ -2,7 +2,7 @@
 # Set up Apache Load Balancer status
 - name: Set up Apache Load Balancer status
   ansible.builtin.include_tasks: lb_status.yml
-  when: lb_type != 'apache'
+  when: lb_type == 'apache'
 
 # Update the /etc/hosts file
 - name: Update the /etc/hosts file
